--- a/Red_Social/css/login.css
+++ b/Red_Social/css/login.css
@@ -1,122 +1,86 @@
-*{
-box-sizing: border-box;
--moz-box-sizing: border-box;
--webkit-box-sizing: border-box;
-font-family: arial;
+	*{
+	margin: 0px;
+	padding: 0px;
+	font-family: sans-serif;
 }
 body{
-	background: url("../img/fondo.jpg");
+	background-color: #E4E4E4;
 }
-a{
+.contenedor{
+	margin: 50px;
+}
+.contenedor-login{
+	margin: 20px;
+	width: 400px;
+	text-align: center;
+	padding: 15px;
+	border: 1px solid #D4D5D4;
+	background-color: #fff;
+}
+.contenedor-login a{
 	text-decoration: none;
+	color: black;
 }
-.contenedor-form{
-	width: 350px;
-	padding: 20px 20px;
-	background: rgba(235, 235, 205, 0.7);
-	border-radius: 5px;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	margin: 20px auto;
+.contenedor-login .title{
+	font-size: 50px;
+	font-weight: 100;
+	margin: 10px;
 }
-.contenedor-form h1{
-	text-align: center;
-	color: #2c3e50;
+.contenedor-login .input-control{
+	padding-left: 20px;
+	text-align: left;
+	font-size: 12px;
+	font-weight: 100;
+	border: 1px solid #E5E7E5;
+	background-color: #FBFBFB;
+	margin: 5px;
+	width: 300px;
+	height: 35px;
 }
-.input-control{
-	width: 100%;
-	height:  50px;
-	margin-bottom: 15px;
-	padding: 5px 7px 5px 15px;
-	border: none;
-	color: #666;
-	border: 2px solid #ccc;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-}
-.input-control:focus{
-	outline-style: none;
-	border-color: #2c3e50;
-	transition: 0.5s;
-}
-.input-control-2{
-	width: 100%;
-	height: 50px;
-	margin-bottom: 15px;
-	padding: 5px 7px 5px 15px;
-	border: none;
-	color: #666;
-	border-bottom: 2px solid #ccc;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-}
-.contenedor-form select{
-	width: 15%;
-	height: : 30px;
-	text-align: center;
-	border-style: none;
-	border-radius: 5px;
-}
-.log-btn{
-	width: 100%;
-	height: 50px;
-	border: none;
-	background: #2c3e50;
-	color: #fff;
-	cursor: pointer;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	margin-bottom: 15px;
 
-}
-.registro-correcto{
-	width: 100%;
-	margin: 0 auto;
-	padding: 10px 10px 10px 10px;
-	background-color: #20E376;
-	color: #fff;
-	border: 1px solid #fff;
+.contenedor-login .log-btn{
+	margin: 5px;
+	width: 320px;
+	height: 30px;
+	color: white;
+	border-radius: 5px 5px 5px 5px;
+	border: 0px solid white;
+	background-color: #3B63FF;
 	cursor: pointer;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	margin-bottom: 15px;
 }
-.registro-correcto:hover{
-	background-color: #419333;
+.contenedor-login .input-control-select{
+	padding-left: 20px;
+	text-align: left;
+	font-size: 12px;
+	font-weight: 100;
+	border: 1px solid #E5E7E5;
+	background-color: #FBFBFB;
+	margin: 5px;
+	width: 276px;
+	height: 35px;
 }
-.link{
-	display: inline-block;
-	text-decoration: none;
-	color: #2c3e50;
+.contenedor-login #foto{
+	height: 35px;
+}
+.recordar-contrasena p{
+	margin: 15px;
 	font-size: 14px;
+	font-weight: 100;
 }
-.link:hover{
-	text-decoration: underline;
+.registrar-link{
+	margin: 15px;
+	font-size: 14px;
+	font-weight: 100;
 }
-.contenedor-form .error{
-	width: 100%;
-	margin: 0 auto;
-	padding: 10px 10px 10px 10px;
-	background-color: #E08773;
+.registrar-link .link{
+	color: blue;
+}
+.error{
+	font-size: 14px;
+	font-weight: 100;	
+	margin: 7px;
+	padding: 15px;
+	background-color: #F03939;
+	border-radius: 5px 5px 5px 5px;
 	color: #fff;
-	border: 1px solid #fff;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	margin-bottom: 15px;
 }
-.registrar{
-	display: inline-block;
-	color: #2c3e50;
-	font-size: 15px;
-}
-#edad{
-	display: inline-block;
-	font-size: 18px;
-	margin-right: 10px;
-}
-
